백준 알고리즘 14891번

--- a/백준/백준/백준.vcxproj
+++ b/백준/백준/백준.vcxproj
@@ -139,6 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="스타트와 링크.cpp" />
+    <ClCompile Include="톱니바퀴.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
