--- a/백준/백준/백준.vcxproj.filters
+++ b/백준/백준/백준.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="스타트와 링크.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="톱니바퀴.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
