--- a/백준/백준/백준.vcxproj.filters
+++ b/백준/백준/백준.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="연산자 끼워넣기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="피보나치수2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
