백준 알고리즘 1932번

--- a/백준/백준/백준.vcxproj
+++ b/백준/백준/백준.vcxproj
@@ -142,6 +142,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="연산자 끼워넣기.cpp" />
+    <ClCompile Include="정수삼각형.cpp" />
     <ClCompile Include="톱니바퀴.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
