--- a/백준/백준/백준.vcxproj.filters
+++ b/백준/백준/백준.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="손익분기점.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="설탕배달.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
