백준 알고리즘 2292번

--- a/백준/백준/백준.vcxproj
+++ b/백준/백준/백준.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="벌집.cpp" />
     <ClCompile Include="설탕배달.cpp" />
     <ClCompile Include="손익분기점.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
