--- a/백준/백준/백준.vcxproj.filters
+++ b/백준/백준/백준.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="설탕배달.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="벌집.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
