백준 알고리즘 11729번

--- a/백준/백준/백준.vcxproj
+++ b/백준/백준/백준.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="피보나치수2.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="하노이탑 이동순서.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
